Issue #1200: Image caption should wrap.

--- a/core/modules/system/css/system.theme.css
+++ b/core/modules/system/css/system.theme.css
@@ -519,10 +519,9 @@ img.align-right {
  * Responsive figure elements, based on http://stackoverflow.com/a/13363408.
  */
 .caption {
-  display: inline-block;
+  display: table;
   max-width: 100%;
   margin: 0 12px 10px;
-  border: 1px solid #ccc;
 }
 .caption.align-center {
   margin-left: auto;
@@ -531,11 +530,14 @@ img.align-right {
 .caption > * {
   display: block;
   max-width: 100%;
+  border: 1px solid #ccc;
 }
 .caption > figcaption {
-  display: block;
+  display: table-caption;
   caption-side: bottom;
   max-width: none;
   padding: 3px 6px;
+  border: 1px solid #CCC;
+  border-top: none;
   background-color: #eee;
 }
